# Getting_Started_With_FastAPI

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2be6cba27f5e_initial_migration.py
app/: main.py  models.py
app/api/: main.py
app/api/routes/: home.py  login.py  users.py
app/core/: config.py  db.py  initial_data.py  secret_key.py
