[tool.poetry]
name = "getting-started-with-fastapi"
version = "0.1.0"
description = "FULLSTACK BLOG APP"
authors = ["Bettenoch <bettenoch254@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
