[tool.poetry]
name = "getting-started-with-fastapi"
version = "0.1.0"
description = "FULLSTACK BLOG APP"
authors = ["Bettenoch <bettenoch254@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {version = ">=0.114.2,<1.0.0", extras = ["standard"]}
python-multipart = ">=0.0.7,<1.0.0"
email-validator = ">=2.1.0.post1,<3.0.0.0"
passlib = {version = ">=1.7.4,<2.0.0", extras = ["bcrypt"]}
tenacity = ">=8.2.3,<9.0.0"
pydantic = ">2.0"
emails = ">=0.6,<1.0"
jinja2 = ">=3.1.4,<4.0.0"
alembic = ">=1.12.1,<2.0.0"
httpx = ">=0.25.1,<1.0.0"
psycopg = {version = ">=3.1.13,<4.0.0", extras = ["binary"]}
sqlmodel = ">=0.0.21,<1.0.0"
bcrypt = "4.0.1"
pydantic-settings = ">=2.2.1,<3.0.0"
sentry-sdk = {version = ">=1.40.6,<2.0.0", extras = ["fastapi"]}
pyjwt = ">=2.8.0,<3.0.0"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.3,<8.0.0"
mypy = ">=1.8.0,<2.0.0"
ruff = ">=0.2.2,<1.0.0"
pre-commit = ">=3.6.2,<4.0.0"
types-passlib = ">=1.7.7.20240106,<2.0.0.0"
coverage = ">=7.4.3,<8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
